<resources>
    <string name="app_name">Smart Alarm Clock</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="weekday_mon">Mon</string>
    <string name="weekday_tue">Tue</string>
    <string name="weekday_wed">Wed</string>
    <string name="weekday_thu">Thu</string>
    <string name="weekday_fri">Fri</string>
    <string name="weekday_sat">Sat</string>
    <string name="weekday_sun">Sun</string>
</resources>
