<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/item_margin_unit"
    android:paddingTop="@dimen/item_margin_unit"
    android:paddingRight="@dimen/item_margin_unit"
    android:paddingLeft="@dimen/item_margin_unit"
    android:paddingBottom="@dimen/item_margin_unit_2x" >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/item_margin_unit_0.5x" >
        <TextView
            android:id="@+id/alarm_time_to_reach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin_unit_0.5x"
            android:textSize="@dimen/alarm_time_text_size_big" />
        <TextView
            android:id="@+id/alarm_end_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin_unit_0.5x"
            android:textSize="@dimen/text_size_medium" />
        <LinearLayout
            android:id="@+id/weekdays_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/item_margin_unit_0.5x" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekday_mon"
                android:padding="@dimen/item_margin_unit_0.5x" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekday_tue"
                android:padding="@dimen/item_margin_unit_0.5x" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekday_wed"
                android:padding="@dimen/item_margin_unit_0.5x" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekday_thu"
                android:padding="@dimen/item_margin_unit_0.5x" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekday_fri"
                android:padding="@dimen/item_margin_unit_0.5x" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekday_sat"
                android:padding="@dimen/item_margin_unit_0.5x" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekday_sun"
                android:padding="@dimen/item_margin_unit_0.5x" />
        </LinearLayout>
    </LinearLayout>
    <android.support.v7.widget.SwitchCompat
        android:id="@+id/alarm_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchPadding="@dimen/item_margin_unit"
        android:switchMinWidth="300dp"
        android:layout_gravity="center_vertical" />
</LinearLayout>